# cors-ica

./: README.md  pyproject.toml
output/output_corsica/: eeg_metrics_2026-05-13_11-41-11.csv
src/CORSICA/: artifact_reduction.py  eeg_metrics.csv
src/ci_artifact_reduction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
